objects/Categories__x.object
<CustomObject>
    <description>Categories</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Categories</externalName>
    <fields>
        <fullName>CategoryID__c</fullName>
        <description>CategoryID</description>
        <externalDeveloperName>CategoryID</externalDeveloperName>
        <label>CategoryID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <description>CategoryName</description>
        <externalDeveloperName>CategoryName</externalDeveloperName>
        <label>CategoryName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <description>Picture</description>
        <externalDeveloperName>Picture</externalDeveloperName>
        <label>Picture</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Categories</label>
    <pluralLabel>Categories</pluralLabel>
</CustomObject>